Move more HTML out of the .java file and into file fragments

--- a/Templates/report_template.html
+++ b/Templates/report_template.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div id="header_title">
-            <img src="{{FASTQC_ICON_BASE64}}" alt="FastQC">FastQC Report
+            <img src="{{FASTQC_ICON_BASE64}}" alt="FastQC"></img>FastQC Report
         </div>
         <div id="header_filename">
             <p>{{DATE}}</p>
