--- a/Templates/fastqc.css
+++ b/Templates/fastqc.css
@@ -258,7 +258,6 @@ body {
   border-top: 1px solid #EEE;
   font-size: 0.9rem;
   color: #666;
-  text-align: center;
 }
 
 /* Content styling */
@@ -309,12 +308,8 @@ tr:nth-child(even) td {
 
 /* Style Basic Statistics table (first module) to look like a definition list */
 .module:first-of-type table {
-  border-collapse: separate;
-  border-spacing: 0;
   min-width: auto;
-  margin: 1rem 0;
-  width: auto;
-  max-width: 600px;
+  max-width: 100%;
 }
 
 .module:first-of-type table thead {
@@ -322,44 +317,24 @@ tr:nth-child(even) td {
 }
 
 .module:first-of-type table tbody tr {
-  display: block;
-  margin-bottom: 1.5rem;
-  border: none;
   background: none;
+}
+.module:first-of-type table td {
+  font-family: sans-serif;
+  background-color: transparent;
 }
 
 .module:first-of-type table tbody td:first-child {
-  /* Style like definition list title (label above) */
-  display: block;
-  font-weight: normal;
-  font-family: sans-serif;
-  background-color: transparent;
-  padding: 0;
-  border: none;
-  color: #666;
-  text-transform: uppercase;
-  font-size: 0.75rem;
-  letter-spacing: 0.8px;
-  margin-bottom: 0.25rem;
-  line-height: 1.2;
+  font-weight: bold;
+  color: #333;
+  text-align: right;
+  width: 12rem;
 }
-
 .module:first-of-type table tbody td:last-child {
-  /* Style like definition list value (below label) */
-  display: block;
-  font-family: sans-serif;
-  font-weight: normal;
-  background-color: transparent;
-  padding: 0;
-  margin: 0;
-  border: none;
   color: #000;
-  font-size: 1.1rem;
-  line-height: 1.3;
 }
-
-.module:first-of-type table tbody tr:nth-child(even) td {
-  background-color: transparent;
+.module:first-of-type table tbody tr:last-child td {
+  border-bottom: none;
 }
 
 img {
