--- a/Templates/report_template.html
+++ b/Templates/report_template.html
@@ -19,7 +19,7 @@
             <span class="hamburger"></span>
         </label>
         <div class="mobile-title">
-            <img src="{{FASTQC_ICON_BASE64}}" alt="FastQC" class="mobile-icon" />
+            {{FASTQC_ICON_SVG_MOBILE}}
             <span class="mobile-title-app">FastQC:</span>
             <span class="mobile-title-filename">{{FILENAME}}</span>
         </div>
@@ -30,7 +30,7 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <a href="#" alt="Back to top" class="header-title">
-                    <img src="{{FASTQC_ICON_BASE64}}" alt="FastQC" />FastQC Report
+                    {{FASTQC_ICON_SVG_SIDEBAR}}FastQC Report
                 </a>
                 <div class="header-filename">
                     <p><a href="#" alt="Back to top">{{DATE}}</a></p>
