--- a/Templates/fastqc.css
+++ b/Templates/fastqc.css
@@ -245,6 +245,8 @@ body {
   padding: 2rem;
   background-color: white;
   min-height: 100vh;
+  max-width: calc(100vw - 300px);
+  overflow-x: auto;
 }
 
 .module {
@@ -341,21 +343,9 @@ tr:nth-child(even) td {
 
 img {
   max-width: 100%;
-  height: auto;
-  padding-top: 0;
-  margin-top: 0;
-  border-top: 0;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-img.indented {
-  margin-left: 2rem;
 }
 
 p {
-  padding-top: 0;
   margin: 1rem 0;
 }
 
@@ -442,12 +432,6 @@ a:hover {
     max-width: 100% !important;
     height: auto !important;
   }
-
-  /* Remove left margin from indented images on mobile */
-  img.indented {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
 }
 
 @media (max-width: 480px) {
@@ -481,11 +465,5 @@ a:hover {
   .module {
     padding-left: 0;
     padding-right: 0;
-  }
-
-  /* Remove left margin from indented images on small mobile */
-  img.indented {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
   }
 }
