--- a/Templates/report_template.html
+++ b/Templates/report_template.html
@@ -51,7 +51,8 @@
 {{MODULE_CONTENT}}
 
             <footer class="footer">
-                Produced by <a href="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/">FastQC</a>  (version {{VERSION}})
+                Produced by <a href="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/" target="_blank">FastQC</a>
+                (version {{VERSION}}).
             </footer>
         </main>
     </div>
